<resources>
    <string name="app_name">HUWATIEXPRESSApplication</string>

    <string name="search">Search</string>

    <!--Facebook Google-->
    <string name="facebook_app_id">268472840291683</string>
    <string name="fb_login_protocol_scheme">fb268472840291683</string>

    <!--Start Login & Register Activity-->
    <string name="FullName">Fullname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_create_an_account">Create an account?</string>
    <string name="btn_already_have_an_account">Already have an account?</string>
    <!--End Login & Register Activity-->

    <!--Start Menu Label-->
    <string name="menu_ticket">Ticket</string>
    <string name="menu_check_ticket">Check Ticket</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_driver">Driver</string>
    <string name="menu_car_information">Car Information</string>
    <string name="menu_passenger_information">Passenger information</string>
    <string name="menu_account">Account</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact_us">Contact Us</string>
    <!--End Menu Label-->

    <!--Start Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--End Navigation-->

    <!--Start Ticket Layout-->
    <string name="ticket_search_trip">Search Trip</string>
    <string name="ticket_start_point">Start point</string>
    <string name="ticket_stop_point">Stop point</string>
    <string name="ticket_one_way">Single</string>
    <string name="ticket_return">Return</string>
    <!--End Ticket Layout-->

    <!--Start Trips Layout-->
    <string name="trips_text_prev"><![CDATA[<]]></string>
    <string name="trips_text_date">01/06/2017</string>
    <string name="trips_text_next"><![CDATA[>]]></string>
    <!--End Trips Layout-->

    <!--Start Item Ticket List-->
    <string name="item_ticket_car_name">Phúc Thuận Thảo</string>
    <string name="item_ticket_car_type">Loại xe: Giường nằm</string>
    <string name="item_ticket_round">Tuy Hòa - Sài Gòn</string>
    <string name="item_ticket_time">18:30 - 05:00</string>
    <string name="item_ticket_seat">2 Ghế Trống</string>
    <string name="item_ticket_price">225.000đ</string>
    <!--End Item Ticket List-->

    <!--Start Customer Information-->
    <string name="customer_information_full_name">Fullname *</string>
    <string name="customer_information_email">Email</string>
    <string name="customer_information_phone">Phone *</string>
    <string name="customer_information_identity_card">Identity Card *</string>
    <!--End Customer Information-->

    <!--Start Booking Information-->
    <string name="booking_information_thongtinkhachhang">Customer Information</string>
    <string name="booking_information_hoten">Họ tên</string>
    <string name="booking_information_email">Email</string>
    <string name="booking_information_sdt">So dien thoai</string>
    <string name="booking_information_cmnd">CMND</string>
    <string name="booking_information_thongtinve">Thông tin vé</string>
    <string name="booking_information_trip">Tuyến</string>
    <string name="booking_information_round">Chuyến</string>
    <string name="booking_information_startday">Ngày đi</string>
    <string name="booking_information_seat">Số ghế</string>
    <string name="booking_information_company">Nhà xe</string>
    <string name="booking_information_cartype">Loại xe</string>
    <string name="booking_information_licenseplates">Biển số xe</string>
    <!--End Booking Information-->

    <!--Start Check Ticket-->
    <string name="check_ticket_email_or_phone">Email or Phone</string>
    <string name="check_ticket_code_ticket">Code ticket</string>
    <string name="check_ticket_search_ticket">Search Ticket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Stop Check Ticket-->
</resources>


