<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.edu.hutech.lvtien.huwatiexpressapplication.View.Register.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Full Name-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/inputText_marginLeft"
        android:layout_marginRight="@dimen/inputText_marginRight"
        android:layout_marginTop="@dimen/inputText_marginTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_fullname"
            android:drawablePadding="@dimen/inputText_drawable_padding"
            android:hint="@string/FullName"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />
    </android.support.design.widget.TextInputLayout>

    <!--Username-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/inputText_marginLeft"
        android:layout_marginRight="@dimen/inputText_marginRight"
        android:layout_marginTop="@dimen/inputText_marginTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFullName">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="@dimen/inputText_drawable_padding"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />
    </android.support.design.widget.TextInputLayout>

    <!--Password-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/inputText_marginLeft"
        android:layout_marginRight="@dimen/inputText_marginRight"
        android:layout_marginTop="@dimen/inputText_marginTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUsername">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
            android:drawablePadding="@dimen/inputText_drawable_padding"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </android.support.design.widget.TextInputLayout>

    <!--Phone-->
    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/view_marginTop"
        android:background="@drawable/bg_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintVertical_bias="0.0" />

    <!--Register-->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_button_login"
        android:inputType="text"
        android:text="@string/btn_register"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

    <!--Button have an account-->
    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:text="@string/btn_already_have_an_account"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="@+id/btnRegister"
        app:layout_constraintRight_toRightOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</android.support.constraint.ConstraintLayout>
